--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "test-parallax",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,12 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate && gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/nuxt": "^10.9.0",
     "canvas": "^2.11.2",
+    "gh-pages": "^6.1.1",
     "konva": "^9.3.6",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
