--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "vue": "^3.4.21",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "sass": "^1.77.0"
   }
 }
